--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.46MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.09MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-11.83MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.62MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.45MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.31MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-15.89MB/s(Youtube:不良林), server: hkaz6.xmrth-node.xyz, port: 13890, type: vmess, uuid: d3d11dbd-6602-33b7-a8d1-c7999b6f9b88, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz6.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35069, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 阿联酋-1.00MB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.84MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.88MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.65MB/s(Youtube:不良林), server: 152.89.210.105, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇮🇳 印度-2.60MB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
+  - {name: 🇮🇳 印度-1.66MB/s(Youtube:不良林), server: 129.227.201.234, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 129.227.201.234}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-15.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 阿联酋-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
