--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: tanz-moble.0098dns01in.work, port: 35069, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 阿联酋-1.00MB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.84MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.88MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.65MB/s(Youtube:不良林), server: 152.89.210.105, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇮🇳 印度-2.60MB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
-  - {name: 🇮🇳 印度-1.66MB/s(Youtube:不良林), server: 129.227.201.234, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 129.227.201.234}}
+  - {name: 🇮🇳 印度-3.13MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-492.7KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇯🇵 日本-3.76MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.65MB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 阿联酋-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.66MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
